# KalshiShare

./: .env.example  .gitignore  CHANGELOG.md  README.md  launch_referral_assistant.pyw  pyproject.toml
docs/: blueprint.md
src/referral_assistant/: __init__.py  cli.py  config.py  db.py  launcher.py  logging_utils.py  models.py  runtime.py  scheduler.py
src/referral_assistant/adapters/: base.py  reddit.py
src/referral_assistant/services/: alerts.py  compliance.py  gemini_service.py  manual_review.py  scoring.py  visibility.py
src/referral_assistant/ui/: dashboard.py
src/referral_assistant/ui/static/: style.css
src/referral_assistant/ui/templates/: base.html  controls.html  inbox.html  logs.html  overview.html  review.html
tests/: test_compliance.py  test_dashboard.py  test_gemini_service.py  test_launcher.py  test_scheduler.py  test_visibility.py
